--- a/css/index.css
+++ b/css/index.css
@@ -127,3 +127,67 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/* Your code starts here */
+
+/* global styles */
+/* * {
+  outline: 1px solid red;
+} */
+
+body {
+  box-sizing: border-box;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+/* navigation */
+
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px 0;
+}
+
+ul {
+  width: 30%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* header */
+
+header {
+  display: flex;
+  width: 100%;
+  margin: 10px 0;
+  background-color: blueviolet;
+}
+
+header div {
+  width: 50%;
+}
+
+h1 {
+  font-size: 40px;
+  margin-bottom: 5px;
+}
+
+header p {
+  color: red;
+}
+
+header img {
+  outline: 1px solid blueviolet;
+  width: 50%;
+  margin: 10px;
+  padding: 10px;
+  background-color: teal;
+}
+
+main {
+  display: flex;
+  width: 100%;
+  padding: 10px;
+}
