--- a/css/index.css
+++ b/css/index.css
@@ -128,18 +128,31 @@ table {
   border-spacing: 0;
 }
 
-/* Your code starts here */
-
-/* global styles */
-
-* {
+/* Global Styles */
+/* * {
   outline: 1px solid red;
-}
+} */
 
 body {
-  box-sizing: border-box;
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* border: 1px solid red; */
+}
+
+h1 {
+  font-size: 40px;
+  padding: 5px;
+}
+
+p {
+  font-size: 18px;
+}
+
+article {
+  margin: 5px 0;
 }
 
 /* navigation */
@@ -148,47 +161,72 @@ nav {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin: 10px 0;
+  background-color: aqua;
+  padding: 10px 0;
 }
 
-ul {
-  width: 30%;
+nav ul {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 30%;
+  background-color: azure;
+  margin: 0 10px;
 }
 
 /* header */
 
 header {
-  display: flex;
-  width: 100%;
-  margin: 10px 0;
-  background-color: blueviolet;
-}
-
-header div {
-  width: 50%;
-}
-
-h1 {
-  font-size: 40px;
-  margin-bottom: 5px;
-}
-
-header p {
-  color: red;
-}
-
-header img {
-  outline: 1px solid blueviolet;
-  width: 50%;
-  margin: 10px;
-  padding: 10px;
-  background-color: teal;
+  max-width: 85%;
+  border: 1px dashed black;
 }
 
 main {
   display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   width: 100%;
-  padding: 10px;
+  border: 1px solid black;
+  background-color: beige;
+}
+
+section {
+  width: 40%;
+  border: 1px solid blueviolet;
+  padding: 5px;
+}
+
+.first {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  align-items: center;
+}
+
+article {
+  width: 75%;
+  margin: 10px 0;
+  padding: 5px;
+  background-color: cornflowerblue;
+}
+
+.first article {
+  display: flex;
+  background-color: thistle;
+}
+
+.first > :first-child {
+  background-color: honeydew;
+}
+
+.first > :last-child {
+  background-color: teal;
+}
+
+.first > :nth-child(2) {
+  background-color: yellow;
+}
+
+.first > :nth-child(3) {
+  background-color: dodgerblue;
 }
